[gd_scene load_steps=6 format=3 uid="uid://bogv68ksmv4pq"]

[ext_resource type="Script" path="res://Scripts/entrance.gd" id="1_6ejxa"]
[ext_resource type="Texture2D" uid="uid://dphyf5iofd1ii" path="res://Sprites/Misc/doors.png" id="2_21j2v"]
[ext_resource type="PackedScene" uid="uid://c7oa4p0xn7ya" path="res://Instances/interactIcon.tscn" id="2_443u5"]
[ext_resource type="AudioStream" uid="uid://pn1m7mimnnwj" path="res://Audio/sfx/door open sound effect.ogg" id="4_m3rw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hsifd"]
size = Vector2(42, 63)

[node name="entrance" type="Node2D" groups=["saveable"]]
process_mode = 3
script = ExtResource("1_6ejxa")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_as_relative = false
position = Vector2(1, -22)
texture = ExtResource("2_21j2v")

[node name="Area2D" type="Area2D" parent="." groups=["entrance"]]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -21.5)
shape = SubResource("RectangleShape2D_hsifd")

[node name="interactIcon" parent="." instance=ExtResource("2_443u5")]
position = Vector2(1, -21)

[node name="doorSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_m3rw5")

[node name="enterTimer" type="Timer" parent="."]
wait_time = 0.88
one_shot = true

[connection signal="timeout" from="enterTimer" to="." method="_on_enter_timer_timeout"]
